<resources>
    <string name="app_name">MyAccounting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_current_cycle">Current Cycle</string>
    <string name="menu_cycles">Cycles</string>
    <string name="menu_expenditures">Expenditures</string>
    <string name="menu_currents">Currents</string>
    <string name="menu_incomes">Incomes</string>
    <string name="configuration">Configuration</string>

    <string name="money_value">$%1$.2f</string>

    <!-- Cycle information -->
    <string name="start">Start</string>
    <string name="total_expenditure">Total Expenditure</string>
    <string name="total_current">Total Current</string>
    <string name="total_income">Total Income</string>
    <string name="_0">$0</string>
    <string name="close">Close</string>
</resources>
