<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_cycle"
            android:icon="@drawable/ic_menu_current_cycle"
            android:title="@string/menu_current_cycle" />
        <item
            android:id="@+id/nav_cycles"
            android:icon="@drawable/ic_menu_cycles"
            android:title="@string/menu_cycles" />
        <item
            android:id="@+id/nav_expenditures"
            android:icon="@drawable/ic_menu_expenditures"
            android:title="@string/menu_expenditures" />
        <item
            android:id="@+id/nav_currents"
            android:icon="@drawable/ic_menu_currents"
            android:title="@string/menu_currents" />
        <item
            android:id="@+id/nav_incomes"
            android:icon="@drawable/ic_menu_incomes"
            android:title="@string/menu_incomes" />
    </group>

    <item android:title="@string/configuration">
        <menu>

        </menu>
    </item>

</menu>
