<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_current_cycle">

    <fragment
        android:id="@+id/nav_current_cycle"
        android:name="mvvm.prueba.myaccounting.ui.home.HomeFragment"
        android:label="@string/menu_current_cycle"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cycles"
        android:name="mvvm.prueba.myaccounting.ui.gallery.GalleryFragment"
        android:label="@string/menu_cycles"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_expenditures"
        android:name="mvvm.prueba.myaccounting.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_expenditures"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_currents"
        android:name="mvvm.prueba.myaccounting.ui.tools.ToolsFragment"
        android:label="@string/menu_currents"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_incomes"
        android:name="mvvm.prueba.myaccounting.ui.share.ShareFragment"
        android:label="@string/menu_incomes"
        tools:layout="@layout/fragment_share" />
</navigation>